# tgrpc

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt
apps/tdlib_example/: CMakeLists.txt  main.cpp
apps/tgrpc_client/: CMakeLists.txt  main.cpp
apps/tgrpc_server/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/rpc_model/: CMakeLists.txt
modules/rpc_model/proto/: echo_service.proto  system_service.proto  tg_service.proto
modules/rpc_services/: CMakeLists.txt
modules/rpc_services/include/rpc_services/echo/: service.h
modules/rpc_services/include/rpc_services/system/: service.h
modules/rpc_services/include/rpc_services/tg/: service.h
modules/telegram/: CMakeLists.txt
modules/telegram/include/telegram/: handlers_cache.h  request_sender.h  response_reciver.h
rpc_model/: CMakeLists.txt
rpc_model/proto/: echo_service.proto  system_service.proto
